# GaoFen_Drone

./: .gitignore  README.md  lsd.py
aruco_img/: 391.pfm  482.pfm
src/airsim-ros/: CMakeLists.txt  package.xml
src/airsim-ros/include/: PID.h  airsim_control.hpp  airsim_node.hpp
src/airsim-ros/include/AirLib/api/: RpcLibClientBase.hpp
src/airsim-ros/include/AirLib/common/: CommonStructs.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/api/: MultirotorRpcLibClient.hpp
src/airsim-ros/launch/: control.launch  data_recv.launch  image.launch
src/airsim-ros/src/: airsim_barometer.cpp  airsim_control.cpp  airsim_control2.cpp  airsim_control3.cpp  airsim_data_recv.cpp  airsim_image_front_depth.cpp  airsim_image_front_rgb.cpp  airsim_imu.cpp  airsim_magnetic.cpp  airsim_node.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp
src/gf_detection/: CMakeLists.txt  package.xml  rttest.py
src/gf_detection/include/: image_matching.hpp  image_matching_front.hpp  num_detect.hpp
src/gf_detection/resource/: image_matching_front.cpp
src/gf_detection/src/: aruco.py  front_cam_detection.cpp  image_depth2.cpp  image_matching.cpp  image_matching_front.cpp  lsd.py  num_detect.cpp  record.cpp
src/gf_perception/: CMakeLists.txt
src/gf_perception/msg/: Object.msg
src/gf_perception/scripts/: gaofen.py  infrared_detection_V1.1.0.py  train.py
src/gf_perception/scripts/config/: kitti_squeezeDet_config.py
